--- a/CSS/nuoviArticoli.css
+++ b/CSS/nuoviArticoli.css
@@ -32,7 +32,7 @@
     margin-top: 15px;
 }
 
-.bottonePubblica button {
+.pubblica {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 30px;
