--- a/CSS/boxArticolo.css
+++ b/CSS/boxArticolo.css
@@ -6,8 +6,10 @@
 
 .boxTitolo {
     float: left;
-    width: 80%;
+    width: 60%;
     height: auto;
+    background-color: aqua;
+    margin-top: 20px;
 }
 
 .titoloArticolo {
@@ -22,10 +24,28 @@
     text-decoration: underline;
 }
 
-.boxEliminaEvento {
+.boxDataEvento {
     float: left;
-    width: 20%;
+    width: 30%;
+    background-color: yellow;
+    margin-right: 0px;
+    margin-left: 0px;
+    margin-top: 20px;
+}
+
+.dataEvento {
+    padding: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
+}
+
+.boxEliminaEvento {
+    float: right;
+    width: 10%;
     height: auto;
+    background-color: olivedrab;
+    margin-top: 20px;
 }
 
 .eliminaEvento {
@@ -44,12 +64,11 @@
     float: left;
     width: 96%;
     height: auto;
-    border: 1.5px solid black;
+    background-color: green;
     margin-top: 0px;
     margin-left: 2%;
     margin-right: 2%;
     text-align: center;
-    margin-bottom: 0px;
     overflow: auto;
 }
 
