--- a/CSS/citta.css
+++ b/CSS/citta.css
@@ -17,21 +17,27 @@
     background-color: dodgerblue;
 }
 
+.articoloHome {
+    float: left;
+    width: 50%;
+    margin-top: 50px;
+    }
+
 .boxArticoloHome {
     margin-left: 20%;
-    margin-top: 50px;
     width: 60%;
     border: solid yellow;
 }
 
-.articoloHome {
+.immagineArticoloHome {
+    width: 100%;
     float: left;
-    width: 50%;
-    }
+}
 
 .immagineArticoloHome img {
     float: left;
-    width: 100%;
+    width: 400px;
+    height: 400px;
 }
 
 .titoloArticoloHome {
