--- a/CSS/StileNav.css
+++ b/CSS/StileNav.css
@@ -12,23 +12,33 @@ body {
 
 .lenteSearch button {
     float: right;
-    padding: px;
     border: 1.5px;
-    margin-top: 8px;
     margin-right: 10px;
+    margin-top: 8px;
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
     border-style: solid;
+    border-left: white;
     background-color: white;
     border-color: black;
-    font-size: 17px;
+    width: 5%;
+    background-color: white;
+}
+
+.lenteSearch img {
+    width: 90%;
+    height: 34px;
+}
+
+
+.accessoRegistrazione {
+    float: left;
 }
 
 .ricerca input[type=text] {
     float: right;
     padding: 6px;
     border: 1.5px;
-    margin-top: 8px;
     margin-right: 0px;
     font-size: 17px;
     border-top-left-radius: 25px;
@@ -36,27 +46,8 @@ body {
     border-style: solid;
     border-color: black;
     text-align: left;
-}
-
-.lenteSearch {
-    float: right;
-    width: 50px;
-    background-color: white;
-}
-
-.lenteSearch img {
-    width: 100%;
-}
-
-.ricerca {
-    float: right;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    border-bottom: 3px solid transparent;
-
+    margin-top: 8px;
+    min-height: 40px;
 }
 
 
