--- a/CSS/StileNav.css
+++ b/CSS/StileNav.css
@@ -9,19 +9,31 @@ body {
     width: 100%;
 }
 
+.logo {
+    float: left;
+}
+
+.logo img {
+    margin-top: 8px;
+
+    padding-left: 2em;
+    height: 40px;
+    width: auto;
+}
 
 .lenteSearch button {
     float: right;
     border: 1.5px;
     margin-right: 10px;
     margin-top: 8px;
+    margin-bottom: 8px;
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
     border-style: solid;
     border-left: white;
     background-color: white;
     border-color: black;
-    width: 5%;
+    width: 5em;
     background-color: white;
 }
 
@@ -32,7 +44,8 @@ body {
 
 
 .accessoRegistrazione {
-    float: left;
+    float: right;
+    margin-right: 5px;
 }
 
 .ricerca input[type=text] {
@@ -40,6 +53,7 @@ body {
     padding: 6px;
     border: 1.5px;
     margin-right: 0px;
+    margin-bottom: 8px;
     font-size: 17px;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
@@ -51,14 +65,7 @@ body {
 }
 
 
-.logo img {
-    float: left;
-    padding-left: 2em;
-    padding-top: 0.7em;
-    padding-bottom: 0.2em;
-    height: 40px;
-    width: auto;
-}
+
 
 .topnav {
     overflow: hidden;
