--- a/CSS/StileNav.css
+++ b/CSS/StileNav.css
@@ -33,7 +33,7 @@ body {
     border-left: white;
     background-color: white;
     border-color: black;
-    width: 5em;
+    width: 3.5%;
     background-color: white;
 }
 
