--- a/CSS/StileNav.css
+++ b/CSS/StileNav.css
@@ -51,6 +51,16 @@
     font-size: 17px;
 }
 
+.parolaLogin a:link {
+    color: black;
+    text-decoration: none;
+}
+
+.parolaLogin a:visited {
+    color: black;
+    text-decoration: none;
+}
+
 .ricerca input[type=text] {
     float: right;
     padding: 6px;
