--- a/CSS/stile.css
+++ b/CSS/stile.css
@@ -677,26 +677,38 @@ body{
     float: left;
     width: 100%;
     text-align: left;
-    padding-left: 20px;
+    padding-left: 40px;
+    padding-bottom: 20px;
+    padding-top: 10px;
+    margin-top: 20px;
+    height: auto;
 }
 
-.immagineDesrizioneArticolo {
+.immagineDescrizioneArticolo {
     float: left;
     width: 33%;
+    height: auto;
 }
 
-.testoDescrizioneArticolo {
-    float: left;
-    width: 67%;
-    padding: 10px;
-    text-align: left;
-
+.immagineDescrizioneArticolo img {
+    width: 90%;
+    padding-left: 40px;
 }
 
 .infoDescrizioneArticolo {
     float: left;
-    width: 33%;
+    width: 30%;
     text-align: left;
-    padding: 10px;
+    padding-left: 40px;
+    padding-top: 30px;
 }
+
+.testoDescrizioneArticolo {
+    float: left;
+    width: 62%;
+    text-align: left;
+    padding-left: 25px
+}
+
+
 
