--- a/CSS/stile.css
+++ b/CSS/stile.css
@@ -710,5 +710,36 @@ body{
     padding-left: 25px
 }
 
+.boxAcquistaBiglietto {
+    float: left;
+    width: 100%;
+}
+
+.scrittaAcquistoBiglietto {
+    float: left;
+    width: 100%;
+    padding: 30px;
+    font-size: 20px;
+}
+
+.numeroBigliettiAcquistoBiglietti {
+    float: left;
+    width: 100%;
+    padding-left: 30px;
+}
+
+.numeroBigliettiAcquistoBiglietti input {
+    font-size: 15px;
+    margin-bottom: 20px;
+}
+
+.inserisciAcquistaBiglietto {
+    float: left;
+    width: 100%;
+    padding-left: 30px;
+    margin-bottom: 20px;
+    line-height: 200%;
+}
+
 
 
