--- a/CSS/stile.css
+++ b/CSS/stile.css
@@ -232,7 +232,7 @@
 /*==============FOOTER==============*/
 
 
-    .Footer
+    .footer
     {
         float: left;
         background-color: dodgerblue;
