--- a/CSS/stile.css
+++ b/CSS/stile.css
@@ -4,6 +4,13 @@
     margin: 0;
 }
 
+/*============CONTENITORE PAGINE==========*/
+
+.contenitore {
+    width: 100%;
+    min-height: 20em;
+}
+
 /*==============BOX ARTICOLO==============*/
 
 .boxTotaleTitolo {
@@ -67,7 +74,6 @@
     font-size: 20px;
     font-weight: bold;
 }
-
 
 
 .boxImmagineTesto {
