--- a/CSS/stile.css
+++ b/CSS/stile.css
@@ -9,6 +9,7 @@
 .contenitore {
     width: 100%;
     max-height: 40em;
+    margin-bottom: 0px;
 }
 
 /*==============BOX ARTICOLO==============*/
@@ -380,6 +381,7 @@ body{
         color: white;
         width: 100%;
         margin-top: 30px;
+        bottom: 0px;
     }
 
 .sinistra {
