--- a/CSS/stile.css
+++ b/CSS/stile.css
@@ -4,13 +4,26 @@
     margin: 0;
 }
 
+html, body {
+    height: 100%;
+}
+
 /*============CONTENITORE PAGINE==========*/
 
+
+
 .contenitore {
-    width: 100%;
-    max-height: 40em;
-    margin-bottom: 0px;
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -14em;
 }
+
+.spingiGiu {
+    height: 14em;
+    clear: both;
+}
+
 
 /*==============BOX ARTICOLO==============*/
 
@@ -380,9 +393,11 @@ body{
         background-color: dodgerblue;
         color: white;
         width: 100%;
-        margin-top: 30px;
         bottom: 0px;
-    }
+        height: 14em;
+        clear: both;
+        margin-top: 30px;
+        }
 
 .sinistra {
     float: left;
