--- a/css/stile.css
+++ b/css/stile.css
@@ -4,12 +4,17 @@
     margin: 0;
 }
 
-html, body {
+html,
+body {
     height: 100%;
+    font-family: verdana;
+}
+
+body {
+    background-color: #ffffff;
 }
 
 /*============CONTENITORE PAGINE==========*/
-
 
 
 .contenitore {
@@ -115,12 +120,12 @@ html, body {
 
 /*==========ACCESSO-REGISTRAZIONE==========*/
 
-body{
+body {
     font-size: 120%;
     background-color: white;
 }
 
-.header{
+.header {
     width: 30%;
     margin: 20px auto 0px;
     color: black;
@@ -133,7 +138,7 @@ body{
     font-size: 30px;
 }
 
-.utente{
+.utente {
     width: 30%;
     margin: 50px auto 0px;
     color: black;
@@ -146,7 +151,7 @@ body{
 }
 
 
-.insertdata{
+.insertdata {
     width: 30%;
     margin: 0px auto;
     padding: 20px;
@@ -178,17 +183,17 @@ body{
 
 }
 
-.input-group{
+.input-group {
     margin: 10px 0px 10px 0px;
 }
 
-.input-group label{
+.input-group label {
     display: block;
     text-align: left;
     margin: 3px;
 }
 
-.input-group input{
+.input-group input {
     height: 30 px;
     width: 100%;
     padding: 5px 8px;
@@ -208,14 +213,14 @@ body{
     background-color: #ff4d4d;
     font-weight: bold;
     margin: 0 auto 20px;
-    display:block;
+    display: block;
 }
 
 .logout button:hover {
     background-color: coral;
 }
 
-.btn{
+.btn {
     padding: 10px;
     font-size: 25px;
     color: black;
@@ -228,22 +233,22 @@ body{
     background-color: dodgerblue;
 }
 
-.box_errore{
-   color: red;
-   font-weight: bold;
-   text-align: center;
-   margin: 10px;
+.box_errore {
+    color: red;
+    font-weight: bold;
+    text-align: center;
+    margin: 10px;
 }
 
-.box_verde{
-   color: green;
-   font-weight: bold;
-   text-align: center;
-   margin: 10px;
-   border-style: solid;
-   border-color: green;
-   width: 20%;
-   margin: 10px auto 0px;
+.box_verde {
+    color: green;
+    font-weight: bold;
+    text-align: center;
+    margin: 10px;
+    border-style: solid;
+    border-color: green;
+    width: 20%;
+    margin: 10px auto 0px;
 
 }
 
@@ -387,17 +392,16 @@ body{
 /*==============FOOTER==============*/
 
 
-    .footer
-    {
-        float: left;
-        background-color: dodgerblue;
-        color: white;
-        width: 100%;
-        bottom: 0px;
-        height: 14em;
-        clear: both;
-        margin-top: 30px;
-        }
+.footer {
+    float: left;
+    background-color: dodgerblue;
+    color: white;
+    width: 100%;
+    bottom: 0px;
+    height: 14em;
+    clear: both;
+    margin-top: 30px;
+}
 
 .sinistra {
     float: left;
@@ -455,32 +459,43 @@ hr {
 
 .fotoHome {
     width: 100%;
+    height: 20em;
 }
 
 .foto {
-/* Box che racchiude la galleria di foto*/
-margin-top : 30px;
-width : 100%;
+    margin-top: 30px;
+    width: 100%;
 }
 
 .foto img {
-/* Anchor dove è collegata la foto*/
-width : 18%;
-margin-left: 5.6%;
-float: left;
+    width: 18%;
+    margin-left: 5.6%;
+    float: left;
+}
+
+.foto img:hover {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
 }
 
 .nomeCittaFoto {
-    width : 100%;
+    width: 100%;
 }
 
 
 .nomeCittaFoto a {
     padding-top: 10px;
-    width : 18%;
+    width: 18%;
     margin-left: 5.6%;
     float: left;
     text-align: center;
+}
+
+.nomeCittaFoto a:hover {
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    transform: scale(1.5);
 }
 
 .nomeCittaFoto a:link {
@@ -545,23 +560,21 @@ float: left;
     border-radius: 5px 5px 5px 5px;
 }
 
-/*============STILE NAV============*/
+/*============STILE HEADER============*/
 
 .upnav {
+    float: left;
     overflow: hidden;
-    background-color: #99CBFF;
+    background-color: #00b8e6;
     position: sticky;
     width: 100%;
-    height: 56px;
+    height: 2.9em;
 }
 
 .logo {
     float: left;
-}
-
-.logo img {
+    margin-left: 2em;
     margin-top: 8px;
-    padding-left: 2em;
     height: 40px;
     width: auto;
 }
@@ -569,35 +582,32 @@ float: left;
 .lenteSearch button {
     float: right;
     border: 1.5px;
-    margin-right: 10px;
-    margin-top: 8px;
-    margin-bottom: 8px;
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
+    margin-right: 0.625em;
+    margin-top: 0.61em;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
     border-style: solid;
-    border-left: white;
-    background-color: white;
-    border-color: black;
-    width: 3.5%;
-    background-color: white;
-    height: 40px;
+    border-left: #ffffff;
+    background-color: #ffffff;
+    border-color: #000000;
+    width: 4.2em;
+    height: 3.8em;
 }
 
 .lenteSearch img {
-    width: 2em;
+    width: 2.5em;
 }
 
 
 .parolaLogin {
     float: right;
-    margin-right: 15px;
-    margin-top: 18px;
+    margin-top: 1em;
     text-align: center;
-    font-size: 17px;
+    font-size: 0.9em;
 }
 
 .parolaLogin a:link {
-    color: black;
+    color: #000000;
     text-decoration: none;
 }
 
@@ -608,18 +618,16 @@ float: left;
 
 .ricerca input[type=text] {
     float: right;
-    padding: 6px;
+    padding: 0.53em;
     border: 1.5px;
-    margin-right: 0px;
-    margin-bottom: 8px;
+    margin-right: 0;
     font-size: 17px;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
     border-style: solid;
     border-color: black;
     text-align: left;
-    margin-top: 8px;
-    min-height: 25px;
+    margin-top: 0.4em;
 }
 
 
@@ -665,12 +673,12 @@ div.topnav {
 
 /*==============STYLE LOGIN E REGISTRAZIONE==============*/
 
-body{
+body {
     font-size: 120%;
     background-color: white;
 }
 
-.header{
+.header {
     width: 30%;
     margin: 20px auto 0px;
     color: black;
@@ -683,7 +691,7 @@ body{
     font-size: 30px;
 }
 
-.utente{
+.utente {
     width: 30%;
     margin: 50px auto 0px;
     color: black;
@@ -696,7 +704,7 @@ body{
 }
 
 
-.insertdata{
+.insertdata {
     width: 30%;
     margin: 0px auto;
     padding: 20px;
@@ -728,17 +736,17 @@ body{
 
 }
 
-.input-group{
+.input-group {
     margin: 10px 0px 10px 0px;
 }
 
-.input-group label{
+.input-group label {
     display: block;
     text-align: left;
     margin: 3px;
 }
 
-.input-group input{
+.input-group input {
     height: 30 px;
     width: 100%;
     padding: 5px 8px;
@@ -758,14 +766,14 @@ body{
     background-color: #ff4d4d;
     font-weight: bold;
     margin: 0 auto 20px;
-    display:block;
+    display: block;
 }
 
 .logout button:hover {
     background-color: coral;
 }
 
-.btn{
+.btn {
     padding: 10px;
     font-size: 25px;
     color: black;
@@ -778,22 +786,22 @@ body{
     background-color: dodgerblue;
 }
 
-.box_errore{
-   color: red;
-   font-weight: bold;
-   text-align: center;
-   margin: 10px;
+.box_errore {
+    color: red;
+    font-weight: bold;
+    text-align: center;
+    margin: 10px;
 }
 
-.box_verde{
-   color: green;
-   font-weight: bold;
-   text-align: center;
-   margin: 10px;
-   border-style: solid;
-   border-color: green;
-   width: 20%;
-   margin: 10px auto 0px;
+.box_verde {
+    color: green;
+    font-weight: bold;
+    text-align: center;
+    margin: 10px;
+    border-style: solid;
+    border-color: green;
+    width: 20%;
+    margin: 10px auto 0px;
 
 }
 
@@ -822,7 +830,7 @@ body{
     float: left;
     width: 50%;
     margin-top: 50px;
-    }
+}
 
 .boxArticoloHome {
     margin-left: 20%;
@@ -924,6 +932,3 @@ body{
     line-height: 200%;
     margin: 20px;
 }
-
-
-
