--- a/css/stile.css
+++ b/css/stile.css
@@ -37,7 +37,7 @@ body {
     float: right;
     border: 1.5px;
     margin-right: 0.625em;
-    margin-top: 0.61em;
+    margin-top: 0.62em;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     border-style: solid;
@@ -45,7 +45,7 @@ body {
     background-color: #ffffff;
     border-color: #000000;
     width: 4.2em;
-    height: 3.8em;
+    height: 3.74em;
 }
 
 .lenteSearch img {
@@ -128,7 +128,7 @@ div.topnav {
     bottom: 0em;
     height: 10em;
     clear: both;
-    margin-top: 1.1em;
+    margin-top: 1.2em;
     font-size: 0.9em;
     line-height: 1.4;
 }
@@ -571,6 +571,7 @@ body {
     width: 18%;
     margin-left: 5.6%;
     float: left;
+    border-radius: 10px
 }
 
 .foto img:hover {
