--- a/css/stile.css
+++ b/css/stile.css
@@ -45,7 +45,7 @@ body {
     background-color: #ffffff;
     border-color: #000000;
     width: 4.2em;
-    height: 3.74em;
+    height: 42px;
 }
 
 .lenteSearch img {
@@ -75,13 +75,14 @@ body {
     padding: 0.53em;
     border: 1.5px;
     margin-right: 0em;
-    font-size: 17px;
+    font-size: 0.9em;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     border-style: solid;
     border-color: black;
     text-align: left;
     margin-top: 0.4em;
+    max-height: 40px;
 }
 
 
@@ -575,9 +576,9 @@ body {
 }
 
 .foto img:hover {
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    transform: scale(1.2);
+    -webkit-transform: scale(1.15);
+    -ms-transform: scale(1.15);
+    transform: scale(1.15);
 }
 
 .nomeCittaFoto {
@@ -591,6 +592,8 @@ body {
     margin-left: 5.6%;
     float: left;
     text-align: center;
+    font-size: 1.3em;
+    font-weight: bold;
 }
 
 .nomeCittaFoto a:link {
