--- a/css/stile.css
+++ b/css/stile.css
@@ -92,7 +92,7 @@ body {
     overflow: hidden;
     background-color: #00b8e6;
     width: 100%;
-    height: 2.7em;
+    height: 3em;
 }
 
 div.topnav {
@@ -108,7 +108,7 @@ div.topnav {
     text-align: center;
     padding: 0.8em 1.1em;
     text-decoration: none;
-    font-size: 0.9em;
+    font-size: 1em;
 }
 
 .topnav a:hover {
@@ -294,8 +294,7 @@ hr {
     color: black;
     background: #00b8e6;
     text-align: center;
-    border-bottom: none;
-    border-radius: 10px 10px 0px 0px;
+    border: 1px solid #002699;
     padding: 1em;
     font-size: 1.3em;
     font-weight: bold;
@@ -321,7 +320,6 @@ hr {
     margin-left: 30%;
     padding: 20px;
     background: white;
-    border-radius: 0px 0px 10px 10px;
 }
 
 .datiUtente {
@@ -348,33 +346,35 @@ hr {
 }
 
 .input-group {
-    margin: 10px 0px 10px 0px;
+    margin-top: 0.5em;
 }
 
 .input-group label {
+    float: left;
     display: block;
     text-align: left;
-    margin: 3px;
-}
-
-.input-group input {
-    height: 30 px;
-    width: 100%;
-    padding: 5px 8px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: 1px solid gray;
+    margin: 0.3em;
+    margin-top: 1em;
     font-weight: bold;
 }
 
+.input-group input {
+    float: left;
+    height: 2.5em;
+    width: 100%;
+    font-size: 1em;
+    border: 0.5px solid #999999;
+    padding-left: 0.4em;
+    margin-bottom: 1em;
+}
+
 .logout button {
-    background-color: #B0C4DE;
+    background: #00b8e6;
     border: solid thin black;
     font-size: 16px;
     text-align: center;
     border-radius: 5px 5px 5px 5px;
     padding: 5px 10px;
-    background-color: #ff4d4d;
     font-weight: bold;
     margin: 0 auto 20px;
     display: block;
@@ -385,12 +385,11 @@ hr {
 }
 
 .btn {
-    padding: 10px;
-    font-size: 25px;
+    padding: 0.5em;
     color: black;
-    background: #99CBFF;
-    border: none;
+    background: #00b8e6;
     text-align: center;
+    width: 50px;
 }
 
 .btn:hover {
