--- a/css/stile.css
+++ b/css/stile.css
@@ -288,6 +288,91 @@ hr {
     padding: 20px;
 }
 
+/* =============== CONTATTI* ==============*/
+
+.titoloContatti {
+    width: 100%;
+    float: left;
+    text-align: center;
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
+
+.comeContattarci {
+    float: left;
+    margin-left: 3em;
+    width: 100%;
+    text-align: left;
+    font-size: 1.4em;
+    margin-bottom: 1.3em;
+}
+
+.contatti hr {
+    border: 1px solid #0000e6;
+    background-color: #0000e6;
+    margin-bottom: 1.3em;
+    margin-right: 5%;
+}
+
+.contatti {
+    float: left;
+    width: 45%;
+    margin-bottom: 0.4em;
+    margin-left: 5%;
+}
+
+.box {
+    float: left;
+    width: 100%;
+}
+
+.boxLogo {
+    float: left;
+    width: 3em;
+    padding: 0.7em;
+}
+
+.numero {
+    padding: 0.7em;
+    font-size: 1.5em;
+}
+
+.contatto {
+    padding: 1em;
+    font-size: 1.3em;
+}
+
+.sede {
+    float: left;
+    width: 45%;
+    margin-right: 5%;
+}
+
+.testoSede {
+    text-align: center;
+    margin-top: 0.5em;
+    margin-bottom: 2em;
+}
+
+.indirizzo img {
+    margin-top: 2em;
+    margin-left: 46%;
+    width: 3em;
+    margin-bottom: 1.5em;
+}
+
+.indirizzo img:hover {
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+}
+
+.indirizzoCompleto {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 20px;
+}
+
 /*==========ACCESSO-REGISTRAZIONE==========*/
 
 .header {
@@ -420,141 +505,7 @@ hr {
 }
 
 
-/* =============== CONTATTI* ==============*/
 
-.titoloContatti {
-    width: 100%;
-    float: left;
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 40px;
-}
-
-.comeContattarci {
-    float: left;
-    margin-left: 6%;
-    width: 100%;
-    text-align: left;
-    padding-left: 10px;
-    font-size: 20px;
-    margin-bottom: 20px;
-}
-
-.contatti hr {
-    border: 1px solid;
-    background-color: blue;
-    border-radius: 25px 25px 25px 25px;
-    border-color: blue;
-    margin-bottom: 20px;
-    margin-right: 5%;
-
-}
-
-.contatti {
-    float: left;
-    width: 45%;
-    margin-bottom: 5px;
-    margin-left: 5%;
-}
-
-.fisso {
-    float: left;
-    width: 100%;
-}
-
-.logoNumeroFisso {
-    float: left;
-    width: 3em;
-    padding: 10px;
-}
-
-.numeroFisso {
-    padding: 15px;
-    margin-left: 10px;
-    font-size: 25px;
-}
-
-.mobile {
-    float: left;
-    width: 100%;
-}
-
-.logoNumeroMobile {
-    float: left;
-    width: 3em;
-    padding: 10px;
-}
-
-.numeroMobile {
-    padding: 15px;
-    margin-left: 10px;
-    font-size: 25px;
-}
-
-.eMail {
-    float: left;
-    width: 100%;
-}
-
-.immagineMail {
-    float: left;
-    width: 3em;
-    padding: 10px;
-}
-
-.indirizzoEmail {
-    padding: 20px;
-    margin-left: 10px;
-    font-size: 20px;
-}
-
-.telegramContatti {
-    float: left;
-    width: 100%;
-}
-
-.immagineTelegram {
-    float: left;
-    width: 3em;
-    padding: 10px;
-}
-
-.contattoTelegram {
-    padding: 20px;
-    margin-left: 10px;
-    font-size: 20px;
-}
-
-.sede {
-    float: left;
-    width: 45%;
-    margin-right: 5%;
-}
-
-.testoSede {
-    text-align: center;
-    margin-top: 2px;
-    margin-bottom: 20px;
-}
-
-.indirizzo img {
-    margin-top: 30px;
-    margin-left: 46%;
-    width: 3em;
-    margin-bottom: 20px;
-}
-
-.indirizzo img:hover {
-    -webkit-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    transform: scale(1.3);
-}
-
-.indirizzoCompleto {
-    margin-top: 10px;
-    text-align: center;
-    font-size: 20px;
-}
 
 
 
