--- a/css/stile.css
+++ b/css/stile.css
@@ -791,3 +791,11 @@ hr {
     border: 1.5px solid #999999;
     margin-left: 36.7%;
 }
+
+.prenota {
+    float: left;
+    width: 70%;
+    margin-top: 4em;
+}
+
+
