--- a/css/stile.css
+++ b/css/stile.css
@@ -751,7 +751,7 @@ hr {
     width: 80%;
     font-size: 1.3em;
     margin-left: 10%;
-    margin-top: 2em;
+    margin-top: 4em;
     font-weight: bold;
     text-align: center;
 }
@@ -796,6 +796,12 @@ hr {
     float: left;
     width: 70%;
     margin-top: 4em;
+    margin-left: 14.5%;
+    text-align: center;
+}
+
+.prenota input {
+
 }
 
 
