--- a/css/stile.css
+++ b/css/stile.css
@@ -378,7 +378,7 @@ hr {
 .header {
     float: left;
     width: 40%;
-    margin-top: 5em;
+    margin-top: 1em;
     margin-left: 30%;
     color: black;
     background: #00b8e6;
@@ -490,17 +490,29 @@ hr {
     font-weight: bold;
     text-align: center;
     margin: 10px;
+    float: left;
+    width: 40%;
+    margin-left: 30%;
+    padding: 20px;
 }
 
-.box_verde {
+.box_successo {
     color: green;
     font-weight: bold;
     text-align: center;
     margin: 10px;
-    border-style: solid;
-    border-color: green;
-    width: 20%;
-    margin: 10px auto 0px;
+    float: left;
+    width: 40%;
+    margin-left: 30%;
+    padding: 20px;
+}
+
+.linkAccessoRegistra{
+    color: black;
+    font-weight: bold;
+    text-align: center;
+    float: left;
+    margin-left: 20%;
 
 }
 
@@ -727,6 +739,22 @@ hr {
     background: #b3ccff;
 }
 
+.boxTornaIndietroNuovoArticolo {
+    float: left;
+    margin-left: 1%;
+    width: 35%;
+    margin-top: 1em;
+}
+
+.tornaIndietroNuovoArticolo {
+    float: left;
+    font-size: 1em;
+    border: 1px solid #000000;
+    padding: 0.5em;
+    border-radius: 13px;
+    background: #b3ccff;
+}
+
 .tornaIndietro:hover {
     background: #00b8e6;
 }
@@ -801,3 +829,13 @@ hr {
 }
 
 .prenota input {}
+
+/*========== MESSAGGI DI SUCCESSO / ERRORE =============*/
+
+h4.errore{
+    color: red;
+}
+
+h4.successo{
+    color: green;
+}
