--- a/css/stile.css
+++ b/css/stile.css
@@ -787,30 +787,31 @@ hr {
 
 /*============CITTA==========*/
 
-.prova a {
+.bottoniEventi a {
     float: left;
     width: 15%;
     height: 1.6em;
     margin-top: 1.3em;
     margin-left: 8%;
     color: black;
-    border: 2px solid #0000000;
+    border: 1px solid #000000;
     background-color: #00b8e6;
     font-size: 1em;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 8px;
+    padding-top: 0.3em;
 }
 
-.prova a:hover {
+.bottoniEventi a:hover {
     background-color: dodgerblue;
 }
 
-.prova a:link {
+.bottoniEventi a:link {
     color: #000000;
     text-decoration: none;
 }
 
-.prova a:visited {
+.bottoniEventi a:visited {
     color: #000000;
     text-decoration: none;
 }
