--- a/css/stile.css
+++ b/css/stile.css
@@ -242,7 +242,7 @@ hr {
 
 .contorno {
     width: 90%;
-    height: inherit;
+    height: 60em;
     border: 4px solid black;
     margin: 5%;
     border-radius: 30px;
