--- a/css/stile.css
+++ b/css/stile.css
@@ -790,7 +790,7 @@ hr {
 .bottoniEventi a {
     float: left;
     width: 15%;
-    height: 1.6em;
+    height: auto;
     margin-top: 1.3em;
     margin-left: 8%;
     color: black;
@@ -800,6 +800,7 @@ hr {
     text-align: center;
     border-radius: 8px;
     padding-top: 0.3em;
+    padding-bottom: 0.3em;
 }
 
 .bottoniEventi a:hover {
@@ -825,7 +826,7 @@ hr {
 .boxArticoloHome {
     margin-left: 20%;
     width: 60%;
-    border: solid yellow;
+    height: 40em;
 }
 
 .immagineArticoloHome {
@@ -842,15 +843,14 @@ hr {
 .titoloArticoloHome {
     float: left;
     width: 100%;
-    text-align: center;
-    background-color: aqua;
+    padding: 4px;
+    text-align: left;
 }
 
 .testoArticoloHome {
     float: left;
-    width: 97%;
+    width: 100%;
     padding: 5px;
-    background-color: red;
 }
 
 
