nuovo articolo spostato piu a sinistra

--- a/css/stile.css
+++ b/css/stile.css
@@ -58,6 +58,7 @@ body {
     margin-top: 0.9em;
     text-align: center;
     font-size: 1.1em;
+    margin-right: 0.7em;
 }
 
 .parolaLogin a:link {
