--- a/css/stile.css
+++ b/css/stile.css
@@ -579,7 +579,7 @@ hr {
 
 /*==========ACCESSO-REGISTRAZIONE==========*/
 
-.header {
+.testa {
     float: left;
     width: 40%;
     margin-top: 1em;
@@ -591,6 +591,7 @@ hr {
     padding: 1em;
     font-size: 1.3em;
     font-weight: bold;
+
 }
 
 .utente {
@@ -607,12 +608,11 @@ hr {
 }
 
 
-.insertdata {
+.inserisciDati {
     float: left;
     width: 40%;
-    margin-left: 30%;
-    padding: 20px;
-    background: white;
+    margin-left: 32%;
+    margin-top: 1em;
 }
 
 .datiUtente {
@@ -638,12 +638,13 @@ hr {
 
 }
 
-.input-group {
-    margin-top: 0.5em;
+.input {
+    width: 100%;
 }
 
-.input-group label {
+.input label {
     float: left;
+    width: 100%;
     display: block;
     text-align: left;
     margin: 0.3em;
@@ -651,10 +652,10 @@ hr {
     font-weight: bold;
 }
 
-.input-group input {
+.input input {
     float: left;
     height: 2.5em;
-    width: 100%;
+    width: 98%;
     font-size: 1em;
     border: 0.5px solid #999999;
     padding-left: 0.4em;
@@ -677,15 +678,19 @@ hr {
     background-color: coral;
 }
 
-.btn {
+.bottonee input{
+    width: 100%;
+    float: left;
     padding: 0.5em;
     color: black;
     background: #00b8e6;
     text-align: center;
-    width: 50px;
+    font-size: 1em;
+    border: 1px solid #000000;
+    margin-top: 1.3em;
 }
 
-.btn:hover {
+.bottonee input:hover {
     background-color: dodgerblue;
 }
 
@@ -711,13 +716,14 @@ hr {
     padding: 20px;
 }
 
-.linkAccessoRegistra{
+.linkAccessoRegistra {
     color: black;
+    width: 40%;
+    margin-left: 32%;
     font-weight: bold;
     text-align: center;
     float: left;
-    margin-left: 20%;
-
+    margin-top: 2em;
 }
 
 
@@ -871,10 +877,10 @@ hr {
 
 /*========== MESSAGGI DI SUCCESSO / ERRORE =============*/
 
-h4.errore{
+h4.errore {
     color: red;
 }
 
-h4.successo{
+h4.successo {
     color: green;
 }
