--- a/css/stile.css
+++ b/css/stile.css
@@ -596,15 +596,11 @@ hr {
 
 .utente {
     float: left;
-    width: 30%;
-    margin: 50px auto 0px;
-    color: black;
-    background: #99CBFF;
+    width: 100%;
     text-align: center;
-    border: 1px solid #B0C4DE;
-    border-radius: 10px 10px 10px 10px;
-    padding: 20px;
-    font-size: 30px;
+    margin-top: 0.8em;
+    font-size: 1.8em;
+    font-weight: bolder;
 }
 
 
@@ -612,34 +608,19 @@ hr {
     float: left;
     width: 40%;
     margin-left: 30%;
-    margin-top: 1em;
-}
-
-.datiUtente {
-    width: 30%;
-    text-align: center;
-    border-radius: 10px 10px 0px 0px;
-    border: 1px solid #B0C4DE;
-    background: #99CBFF;
-    margin-top: 20px;
-    padding: 20px;
-    font-size: 30px;
-    margin: 50px auto 0px;
-
-}
-
-.datiUtente2 {
-    width: 30%;
-    border-radius: 0px 0px 10px 10px;
-    border: 1px solid #B0C4DE;
-    background: white;
-    padding: 20px;
-    margin: 0px auto 0px;
-
+    margin-top: 0.8em;
 }
 
 .input {
     width: 100%;
+    float: left;
+}
+
+.input2 {
+    width: 100%;
+    float: left;
+    font-size: 1.2em;
+    margin-bottom: 0.5em;
 }
 
 .input label {
@@ -662,8 +643,13 @@ hr {
     margin-bottom: 1em;
 }
 
+.logout {
+    float: left;
+    width: 100%;
+}
+
 .logout button {
-    background: #00b8e6;
+    background: #ff0000;
     border: solid thin black;
     font-size: 16px;
     text-align: center;
@@ -675,7 +661,7 @@ hr {
 }
 
 .logout button:hover {
-    background-color: coral;
+    background-color: #b30000;
 }
 
 .bottonee input{
@@ -701,7 +687,7 @@ hr {
     margin: 10px;
     float: left;
     width: 40%;
-    margin-left: 30%;
+    margin-left: 28%;
     padding: 20px;
 }
 
@@ -712,7 +698,7 @@ hr {
     margin: 10px;
     float: left;
     width: 40%;
-    margin-left: 30%;
+    margin-left: 28%;
     padding: 20px;
 }
 
