--- a/css/stile.css
+++ b/css/stile.css
@@ -37,7 +37,7 @@ body {
     float: right;
     border: 1.5px;
     margin-right: 0.625em;
-    margin-top: 0.79em;
+    margin-top: 9px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     border-style: solid;
@@ -49,7 +49,7 @@ body {
 }
 
 .lenteSearch img {
-    width: 2.5em;
+    width: 30px;
 }
 
 
@@ -73,17 +73,17 @@ body {
 
 .ricerca input[type=text] {
     float: right;
-    padding: 0.53em;
+    padding: 3.5px;
     border: 1.5px;
     margin-right: 0em;
-    font-size: 0.9em;
+    font-size: 13px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     border-style: solid;
     border-color: black;
     text-align: left;
-    margin-top: 0.6em;
-    max-height: 40px;
+    margin-top: 9px;
+    height: 25px;
 }
 
 
