--- a/css/stile.css
+++ b/css/stile.css
@@ -880,3 +880,11 @@ h4.errore {
 h4.successo {
     color: green;
 }
+
+.messaggioSpeciale {
+    float: left;
+    width: 100%;
+    padding: 0.7em;
+    font-size: 1.3em;
+    font-weight: bolder;
+}
