--- a/css/stile.css
+++ b/css/stile.css
@@ -241,12 +241,19 @@ hr {
     padding-left: 25px;
 }
 
+.coloreEsterno {
+    float: left;
+    width: 100%;
+    background-color: #000000;
+}
+
 .contorno {
     width: 90%;
     height: 55em;
     border: 4px solid black;
     margin: 5%;
     border-radius: 30px;
+    background-color: #ffffff;
 }
 
 .boxTornaIndietro {
