--- a/css/stile.css
+++ b/css/stile.css
@@ -343,9 +343,13 @@ hr {
     margin-left: 42.4%;
     text-align: center;
     font-size: 1.5em;
-    background: #00b8e6;
+    background: #b3ccff;
     border: 2px solid #000000;
     border-radius: 10px;
+}
+
+.prenota:hover {
+    background: #00b8e6;
 }
 
 
