--- a/css/stile.css
+++ b/css/stile.css
@@ -113,11 +113,11 @@ div.topnav {
 }
 
 .topnav a:hover {
-    border-bottom: 0.2em solid #0000ff;
+    border-bottom: 0.25em solid #0000ff;
 }
 
 .topnav a.active {
-    border-bottom: 0.2em solid #0000ff;
+    border-bottom: 0.25em solid #0000ff;
 }
 
 /*==============FOOTER==============*/
@@ -887,16 +887,46 @@ hr {
     padding: 5px;
 }
 
+/*========== 404 =============*/
+
+.box404 {
+    width: 100%;
+    float: left;
+    font-size: 1.2em;
+    text-align: center;
+    margin-top: 7em;
+}
+
+.box404 h1 {
+    font-size: 7em;
+}
+
+.immagine404 {
+    width: 100%;
+    float: left;
+    text-align: center;
+    margin-top: 1em;
+}
+
+.immagine404 img {
+    width: 13em;
+}
 
 
 /*========== MESSAGGI DI SUCCESSO / ERRORE =============*/
 
 h4.errore {
-    color: red;
+    color: #ff0000;
+    width: 80%;
+    margin-left: 3em;
+    margin-top: 1em;
 }
 
 h4.successo {
-    color: green;
+    color: #2eb82e;
+    width: 80%;
+    margin-left: 3em;
+    margin-top: 1em;
 }
 
 .messaggioSpeciale {
