--- a/css/stileMobile.css
+++ b/css/stileMobile.css
@@ -1,5 +1,9 @@
-@media only screen and (max-width: 830px) {
+@media only screen and (max-width: 880px) {
 
-
+    .foto img {
+        width: 35%;
+        margin-left: 10%;
+        margin-bottom: 3em;
+    }
 
 }
