--- a/css/stileMobile.css
+++ b/css/stileMobile.css
@@ -1,9 +1,18 @@
+@media only screen and (max-width: 1169px) {
+
+    .bottoniEventi a {
+        font-size: 0.8em;
+    }
+
+}
+
 @media only screen and (max-width: 880px) {
 
-    .foto img {
+    .boxFotoCitta {
         width: 35%;
         margin-left: 10%;
-        margin-bottom: 3em;
+        margin-bottom: 4em;
     }
+
 
 }
