--- a/css/stile.css
+++ b/css/stile.css
@@ -99,7 +99,7 @@ body {
 div.topnav {
     position: -webkit-sticky;
     position: sticky;
-    top: 0em;
+    top: -2px;
 }
 
 .topnav a {
@@ -113,11 +113,11 @@ div.topnav {
 }
 
 .topnav a:hover {
-    border-bottom: 0.25em solid #0000ff;
+    border-bottom: 0.2em solid #0000ff;
 }
 
 .topnav a.active {
-    border-bottom: 0.25em solid #0000ff;
+    border-bottom: 0.2em solid #0000ff;
 }
 
 /*==============FOOTER==============*/
